--- a/app/src/main/res/layout/add_contact_emergency.xml
+++ b/app/src/main/res/layout/add_contact_emergency.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/ic_arrow_back"
+                android:src="@drawable/baseline_arrow_back_24"
                 android:contentDescription="Retour"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 app:tint="@android:color/white" />
