--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,10 @@
         <color name="white">#FFFFFFFF</color>
         <color name="lavender">#8692f7</color>
         <color name="grey">#808080</color>
+        <color name="colorPrimaryLight">#BBDEFB</color>
+        <color name="textSecondary">#757575</color>
+        <color name="green">#4CAF50</color>
+        <color name="red">#F44336</color>
+        <color name="unread_notification_bg">#E3F2FD</color>
 
 </resources>
